# mvp-qr-recognition

./: .gitignore  Cargo.toml  README.md  jsconfig.json  next.config.js  package-lock.json  package.json  test_api_aborted.js  vercel.json
crates/qr-core/: Cargo.toml
crates/qr-core/benches/: detection.rs
crates/qr-core/examples/: gen_dataset.rs
crates/qr-core/src/: decoding.rs  detection.rs  emv.rs  geometry.rs  lib.rs  ml_detection.rs  payment.rs  preprocessing.rs
crates/qr-core/tests/: integration.rs  repro_dataset.rs
crates/qr-wasm/: Cargo.toml
crates/qr-wasm/src/: lib.rs
lib/: mlDetector.js
lib/pkg-node/: package.json  qr_wasm.d.ts  qr_wasm.js  qr_wasm_bg.wasm  qr_wasm_bg.wasm.d.ts
pages/: api_logs.js  index.js
pages/api/: logs.js  scan.js
public/pkg/: package.json  qr_wasm.d.ts  qr_wasm.js  qr_wasm_bg.wasm  qr_wasm_bg.wasm.d.ts
scripts/: copy_ort_assets.js  download_convert_model.py
styles/: globals.css
tests/: gen_test_images.rs
www/: index.html  main.js  styles.css
www/pkg/: qr_wasm.d.ts  qr_wasm.js  qr_wasm_bg.wasm
