[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/mvp-qr-recognition"

[workspace.dependencies]
# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.24"

# QR decoding
rxing = "0.6"
rqrr = "0.7"
urlencoding = "2.1"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "ImageData"] }
console_error_panic_hook = "0.1"
console_log = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
