[package]
name = "qr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core QR code recognition library with preprocessing and decoding"

[dependencies]
image.workspace = true
imageproc.workspace = true
rxing.workspace = true
rqrr.workspace = true
urlencoding.workspace = true
tract-core = "0.21.7"
tract-onnx = "0.21.7"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
nalgebra = "0.34.1"

[dev-dependencies]
criterion = "0.5"
qrcode = "0.12"
rand = "0.8"

[[bench]]
name = "detection"
harness = false
