[package]
name = "qr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core QR code recognition library with preprocessing and decoding"

[features]
default = ["ml"]
ml = ["dep:tract-core", "dep:tract-onnx"]

[dependencies]
image.workspace = true

rxing = { version = "0.6", default-features = false }
rqrr.workspace = true
urlencoding.workspace = true
tract-core = { version = "0.21.7", optional = true }
tract-onnx = { version = "0.21.7", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
nalgebra = "0.34.1"


[dev-dependencies]
criterion = "0.5"
env_logger = "0.11.8"
qrcode = "0.12"
rand = "0.8"

[[bench]]
name = "detection"
harness = false
