[package]
name = "qr-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for QR code recognition"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qr-core = { path = "../qr-core" }
image.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
console_log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
log.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
